# gamified-life

./: .gitignore  COMPLETE_REFACTORING_REPORT.md  Cargo.toml  FEATURES_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_PLAN_V1_TO_V2.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  rename-frontend.ps1  vercel.json  verify-refactor.ps1
apps/web/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/actions/: auth.ts
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/dashboard/(protected)/: layout.tsx  page.tsx
apps/web/app/dashboard/body/: page.tsx
apps/web/app/dashboard/career/: page.tsx
apps/web/app/dashboard/coach/: page.tsx
apps/web/app/dashboard/code/: page.tsx
apps/web/app/dashboard/finance/: page.tsx
apps/web/app/dashboard/german/: page.tsx
apps/web/app/dashboard/mind/: page.tsx
apps/web/components/: Avatar3D.tsx  CyberpunkBackground.tsx  JobHuntTracker.tsx  Notifications.tsx  ProgressBar.tsx  SavingsProgress.tsx  Sidebar.tsx  WeeklyScorecard.tsx  index.ts
apps/web/contexts/: AuthContext.tsx  WebSocketContext.tsx
apps/web/hooks/: usePushNotifications.ts  useWebSocket.ts
apps/web/lib/: api.ts  emojis.ts  icons.tsx
apps/web/types/: auth.ts  index.ts
backend/: .env.example  README.md  package-lock.json  package.json  server.js
backend/src/: index.js
backend/src/database/: index.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  body.js  code.js  finance.js  german.js  index.js  player.js  protocol.js  workouts.js
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  IMPROVEMENTS_V2.md  REFACTORING.md  TRANSFORMATION.md
docs/v2/: DATABASE_MIGRATION_GUIDE.md  FUNCTIONALITY_CONTINUITY.md  PHASE2_DATABASE_SETUP.md  PHASES_DETAILED.md  QUICK_REFERENCE.md  README.md  TRANSFORMATION_ROADMAP.md
infrastructure/postgres/init/: 01_schema.sql
infrastructure/scripts/: run_frontend.ps1  run_gateway.ps1  whisper_adapter.py
mirlind-protocol-react/: .env.example  EMPIRE_VISION.md  MIRLIND_TRANSFORMATION.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite-css-plugin.ts  vite.config.ts
mirlind-protocol-react/public/: manifest.webmanifest  sw.js
mirlind-protocol-react/src/: App.tsx  index.css  main.tsx
mirlind-protocol-react/src/components/: AchievementBadge.tsx  B1Countdown.tsx  CharacterAvatar.tsx  Confetti.tsx  CyberpunkBackground.tsx  ErrorBoundary.tsx  Header.tsx  JobHuntTracker.tsx  KeyboardShortcutsHelp.tsx  LevelUpModal.tsx  MainContent.tsx  ParticleBackground.tsx  PhotoProgress.tsx  ProgressChart.tsx  ProtocolHeatmap.tsx  SavingsProgress.tsx  Sidebar.tsx  StatTrainingGuide.tsx  Toast.tsx  ToastContainer.tsx  WeeklyScorecard.tsx  WillpowerIndicator.tsx  WorkoutHistory.tsx  index.ts
mirlind-protocol-react/src/components/animations/: FadeIn.tsx  PageTransition.tsx  Pulse.tsx  ScaleOnHover.tsx  Skeleton.tsx  StaggerContainer.tsx  TabTransition.tsx  TiltCard.tsx  index.ts
mirlind-protocol-react/src/contexts/: AuthContext.tsx  authTypes.ts  useAuth.ts
mirlind-protocol-react/src/data/: challenges.ts  expandedRoadmap.ts  fangyuan.ts  habits.ts  quests.ts  roadmap.ts  skills.ts
mirlind-protocol-react/src/data/json/: roadmap.json  skills.json
mirlind-protocol-react/src/hooks/: index.ts  useKeyboardShortcuts.ts  useNotifications.ts  usePWA.ts  useToast.ts
mirlind-protocol-react/src/routing/: viewRoutes.ts
mirlind-protocol-react/src/services/: adaptiveApi.ts  aiCoreApi.ts  analyticsApi.ts  authApi.test.ts  authApi.ts  bodyApi.ts  coachApi.test.ts  coachApi.ts  codeApi.ts  exportApi.ts  financeApi.ts  germanApi.ts  offlineQueue.test.ts  offlineQueue.ts  outcomesApi.ts  playerApi.ts  protocolApi.ts  retentionApi.ts  weeklyApi.ts
mirlind-protocol-react/src/store/: GameContext.tsx  gameHelpers.ts  gameTypes.ts  useGame.ts
mirlind-protocol-react/src/types/: index.ts
mirlind-protocol-react/src/utils/: confetti.ts  coreStats.ts  emojis.ts  logger.ts  storage.ts  telemetry.ts  willpower.test.ts  willpower.ts
mirlind-protocol-react/src/views/: AchievementsView.tsx  AnalyticsView.tsx  AssessmentView.tsx  AuthView.test.tsx  AuthView.tsx  BodyHQView.tsx  CardsView.tsx  CareerHQView.tsx  ChallengesView.tsx  CharacterProfileView.tsx  ChartsView.tsx  CoachView.tsx  FinanceHQView.tsx  FocusView.tsx  GatesView.tsx  GermanHQView.tsx  HabitsView.tsx  InsightsView.tsx  JournalView.tsx  MeditationView.tsx  MindHQView.tsx  NotificationsView.tsx  ProtocolView.tsx  QuestsView.tsx  SkillsRoadmapView.tsx  TreeView.tsx  WeeklyPlanView.tsx  WeeklyReviewView.tsx  index.ts
mirlind-protocol-react/src/views/cards/: CodingRoadmapTab.tsx  FangYuanView.tsx  MindsetTab.tsx  ModuleDetailModal.tsx  index.ts  types.ts
mirlind-protocol-react/src/views/protocol/: BodyTrackingTab.tsx  CodeTab.tsx  DailyProtocolTab.tsx  FinanceTab.tsx  GermanTab.tsx  OutcomeCommandPanel.tsx  WeeklyTab.tsx  index.ts  types.ts
services/ai_training/: requirements.txt  train.py
services/gateway/: .env.example  Cargo.toml
services/gateway/src/: config.rs  main.rs  models.rs  routes.rs  utils.rs
services/gateway/src/ai/: embeddings.rs  inference.rs  memory.rs  mod.rs  models.rs  vector_store.rs
services/gateway/src/contracts/: mod.rs  properties.rs
services/gateway/src/crypto/: hsm.rs  mod.rs  zk.rs
services/gateway/src/handlers/: adaptive.rs  ai.rs  analytics.rs  auth.rs  challenges.rs  code.rs  curriculum.rs  export.rs  fang_yuan.rs  finance.rs  german.rs  health.rs  jobs.rs  mod.rs  not_found.rs  photos.rs  player.rs  protocol.rs  skills.rs  websocket.rs  weekly.rs  weight.rs  workouts.rs
services/gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
services/gateway/src/models/: user.rs
services/gateway/src/services/: ai.rs  auth.rs  cache.rs  db.rs  mod.rs
shared/types/: Cargo.toml  README.md
shared/types/src/: ai.rs  auth.rs  common.rs  error.rs  finance.rs  lib.rs  messaging.rs  user.rs
(+30 files in other folders)
