[workspace]
resolver = "3"

members = [
    "services/gateway",
    "shared/types",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Mirlind Protocol Team"]
license = "MIT"
repository = "https://github.com/mirlind/life-os"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Web framework (Actix-web for high performance)
actix-web = { version = "4.10", features = ["rustls"] }
actix-cors = "0.7"
actix-rt = "2.10"
actix-service = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.17"
argon2 = "0.5"
sha2 = "0.11"
hmac = "0.13"
rand = "0.9"

# HTTP client (for service-to-service)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# gRPC
tonic = { version = "0.13", features = ["tls"] }
prost = "0.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"
opentelemetry-jaeger = "0.22"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"
futures-util = "0.3"

# Rate limiting
governor = "0.10"

# WebSocket
actix-ws = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
