[workspace]
resolver = "3"

members = [
    "services/gateway",
    "shared/types",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
authors = ["Mirlind Protocol Team"]
license = "MIT"
repository = "https://github.com/mirlind/life-os"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }

# Web framework (Actix-web for high performance)
actix-web = { version = "4.12.1", features = ["rustls"] }
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.11"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "10.2.0"
bcrypt = "0.17.0"
argon2 = "0.5.3"
sha2 = "0.11.0-pre.4"
hmac = "0.13.0-pre.4"
rand = "0.9.1"

# HTTP client (for service-to-service)
reqwest = { version = "0.12.25", features = ["json", "rustls-tls"], default-features = false }

# gRPC
tonic = { version = "0.13.1", features = ["tls"] }
prost = "0.13.5"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.97"

# Logging & Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
opentelemetry = "0.31.0"
opentelemetry-jaeger = "0.23.0"

# Configuration
config = "0.15.11"
dotenvy = "0.15.7"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# UUID
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1.88"

# Futures
futures = "0.3.31"
futures-util = "0.3.31"

# Rate limiting
governor = "0.10.0"

# WebSocket
actix-ws = "0.3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0
