[package]
name = "shared-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
validator.workspace = true
rust_decimal = { version = "1.36", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
